# Rebecca

./: README.md
camera/camera/: .gitignore  README.md  camera.py  icon.svg.import  main.gd  main.gd.uid  main.py  main.tscn  project.godot  pyproject.toml  view.py
cover-screen/hotop_like/app/: terminal.py
cover-screen/hotop_like/theme/: theme.py
cover-screen/hotop_like/utils/: ansi_render.py
cover-screen/kava/src/player/: downloader.rs
cover-screen/lvgl/utils/: lvgl_port.cpp
cover-screen/web/components/: canvas-capturer.js  logger.js
cover-screen/web/page/: package.json
cover-screen/web/page/app/: page.tsx
cover_screen/client/cpp/: .gitignore  CMakeLists.txt  fetch_repos.py  install_zmq.sh  lv_conf.h  main.cpp  repos.json
cover_screen/client/cpp/utils/: cover_screen.cpp  cover_screen.h  lvgl_port.cpp  lvgl_port.h
cover_screen/client/hotop_like/app/: htop_like.py
cover_screen/client/hotop_like/utils/: cover_screen.py
cover_screen/client/kava/: README.md  test.sh
cover_screen/client/lvgl/: CMakeLists.txt
cover_screen/client/player/: Cargo.toml  README.md  test.sh
cover_screen/client/player/src/: cover_screen.rs  main.rs
cover_screen/client/player/src/cover_screen/: mock.rs  mod.rs  socket.rs  traits.rs
cover_screen/client/player/src/player/: color_bar.rs  converter.rs  convertor.rs  downloader.rs  ffmpeg.rs  gif.rs  image.rs  mod.rs  player.rs  types.rs  video.rs
cover_screen/client/python/: main.py  pyproject.toml
cover_screen/client/web/: README.md  index.js  package-lock.json  package.json
cover_screen/hello_world/: .gitignore  pyproject.toml
cover_screen/hotop_like/utils/: cover_screen.py
cover_screen/kava/: Cargo.toml  README.md  test.sh
cover_screen/kava/src/: main.rs
cover_screen/kava/src/screen/: socket.rs
cover_screen/lvgl/: README.md  lv_conf.h  lv_conf.hpp  main.cpp
cover_screen/lvgl/utils/: cover_screen.cpp  cover_screen.h
cover_screen/service/: README.md  main.py  pyproject.toml  socket_test.py
cover_screen/service/api/: __init__.py  ctrl.py  frame_buffer.py
cover_screen/service/desktop/: lcd.py  main.py
cover_screen/service/python/: README.md  main.py
cover_screen/service/python/desktop/: lcd.py  main.py
cover_screen/service/python/test/: socket_test.py
cover_screen/service/python/utils/: lcd.py  rpi5_gpio.py  screen_socket.py
cover_screen/service/rust/: Cargo.toml  README.md
cover_screen/service/rust/cover-screen-sevice/: .gitignore  README.md
cover_screen/service/rust/cover-screen-sevice/src/: main.rs
cover_screen/service/rust/cover-screen-sevice/src/cover_screen/: mod.rs  socket.rs
cover_screen/service/rust/src/: main.rs
cover_screen/service/rust/src/cover_screen/: fb.rs  screen.rs  socket.rs
cover_screen/service/test/: lcd_test.py  socket_test.py
cover_screen/service/utils/: lcd.py  logger.py  screen_socket.py
cover_screen/web/: index.js
cover_screen/web/components/: cover-screen.js
hal/: Cargo.toml  README.md  install.sh  uninstall.sh
hal/cli-tool/kava/: README.md
hal/cli-tool/rebecca-hal/: README.md  build.rs
hal/cli_tool/rebecca-hal/: Cargo.toml  README.md
hal/examples/: .gitignore  README.md  cover_screen.py  imu.py  pyproject.toml
hal/godot-plugin/: Godot-Plugin.csproj  Godot-Plugin.sln  README.md  copy_addon.sh  icon.svg.import  imu_test.gd  imu_test.gd.uid  imu_test.tscn  project.godot
hal/service/: Cargo.toml  README.md  install.sh  uninstall.sh
hal/service/src/: main.rs
hal/service/src/devices/: mod.rs
hal/service/src/devices/backlight/: backlight.rs  mock.rs  mod.rs  sysfs.rs
hal/src/: main.rs  server.rs
hal/src/common/: emoji.rs  mod.rs
hal/src/devices/: manager.rs  mod.rs  register.rs  types.rs
imu/pose-tracking/: .gitignore  Pose-Tracking.csproj  Pose-Tracking.sln  README.md  RammettoOne-Regular.woff2.import  fetch_font.sh  icon.svg.import  label.gd  label.gd.uid  label.gdshader  label.gdshader.uid  main.tscn  pose_controller.gd  pose_controller.gd.uid  pose_traking.gd  project.godot
imu/pose-tracking/Hal/: Hal.cs  Hal.cs.uid  Hal.tscn
imu/pose-tracking/RebeccaImu/: RebeccaImu.cs  RebeccaImu.tscn
imu/rebecca-imu/: .gitignore  Cargo.toml  README.md
imu/rebecca-imu/src/: imu.rs  imu_data.proto  main.rs
rebecca-hal/: README.md
rebecca-hal/src/common/: emoji.rs
rebecca-hal/src/devices/: mod.rs
screen/: .gitignore  Makefile  panel-lg-3p92-overlay.dts  panel-lg-3p92.c
screen/cover/hotop_like/: install_cascadia_code.sh  main.py  pyproject.toml
screen/cover/lvgl/: main.cpp
screen/jerry-tv/: README.md  main.py  pyproject.toml
status_screen/: .gitignore  lcd_test.py  main.py  pyproject.toml
status_screen/test/: lcd_test.py
status_screen/utils/: lcd.py  rpi5_gpio.py  setup.py
status_screen/utils/RPI5/GPIO/: __init__.py
steam/: README.md
vintage/: .gitignore  README.md
(+80 files in other folders)
