[project]
name = "status-screen"
version = "0.1.0"
description = "Status Screen"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "ruff",
]
raspi = [
  "numpy",
  "pyzmq",
  "gpiozero==2.0.1",
  "lgpio==0.2.2.0",
  "luma.lcd==2.11.0",
]
desktop = [
  "numpy",
  "pyzmq",
]

[tool.uv]
default-groups = ["dev", "raspi"]
