[package]
name = "rebecca-hal-service"
version = "1.6.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
log = "0.4.27"
env_logger = "0.11.8"
zeromq = { version = "0.4.1" }
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
regex = "1.11.1"
once_cell = "1.21.3"
prost = "0.14.1"
derivative = "2.2.0"
indexmap = "2.10.0"
ahrs = "0.7.0"
nalgebra = "0.33.2"
