[package]
name = "rebecca-imu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
zeromq = "0.4.1"
reqwest = { version = "0.12.22", features = ["json"] }
colored = "3.0.0"
prost = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"
