[package]
name = "cover-screen-player"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
zeromq = { version = "0.4.1" }
tokio = { version = "1.47.1", features = ["full"] }
regex = "1.11.1"
log = "0.4.27"
env_logger = "0.11.8"
winit = "0.30.12"
