[package]
name = "cover-screen-sevice"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
zeromq = { version = "0.4.1" }
tokio = { version = "1.47.1", features = ["full"] }
regex = "1.11.1"
log = "0.4.27"
env_logger = "0.11.8"